format adjustments, style fixes, attempting to fuck button background color overflow

--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
   color: #000000;
   border-left: 1px solid black;
   padding: 10px;
-  
+
 }
 
 .jumbotron {
@@ -22,11 +22,11 @@ textarea{
   border-bottom: 10px solid black;
 }
 
-.description{
+.description {
   white-space: pre-wrap;
 }
 
-.time-block{
+.time-block {
   text-align: center;
   border-radius: 15px;
 }
@@ -34,7 +34,8 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: fit-content;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
+  ;
   background-color: #06AED5;
 }
 
@@ -63,6 +64,7 @@ textarea{
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+  background-clip: padding-box;
   background-color: #06AED5;
   color: white;
 }
@@ -72,6 +74,6 @@ textarea{
   transition: all .3s ease-in-out;
 }
 
-.colStyle {
-  border: solid black;
+.textStyle {
+  color: #000000;
 }
